--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         </ul>
       </nav>
       <div class="nav-mobile">
-        <p>mboile</p>
+        <svg width="84" height="84" viewBox="0 0 84 84" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect y="39" width="84" height="6" rx="3" fill="#CC1818"/>
+          <rect x="14" y="19" width="70" height="6" rx="3" fill="#CC1818"/>
+          <rect y="59" width="84" height="6" rx="3" fill="#CC1818"/>
+          </svg>
       </div>
     </header>
     <main>
@@ -48,11 +52,17 @@
         
 
         <button class="demo-cta">Watch demo reel</button>
+        <div class="cta-arrow">
+          <svg width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 8L11 18L21 8" stroke="white"/>
+            <path d="M1 1L11 11L21 1" stroke="white"/>
+            </svg>
+        </div>
       </section>
 
       <section class="demo">
-        <h2>Demo Reel</h2>
-
+        
+        <div class="demo-vid-container">
         <iframe
           width="560"
           height="315"
@@ -61,6 +71,7 @@
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
+      </div>
         <p>
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
           nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
