--- a/index.html
+++ b/index.html
@@ -81,6 +81,29 @@
         </p>
       </section>
 
+      <section class="ido">
+        <h2>What I do</h2>
+        <div class="ido-content">
+          <div class="char-rig">
+            <h3>Character Rigging</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+              sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+              rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+              ipsum dolor sit amet.</p>
+          </div>
+          <div class="techn-animate">
+            <h3>Technical Animator</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+              sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+              rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+              ipsum dolor sit amet.</p>
+          </div>
+        </div>
+
+      </section>
+
       <!--TOOLS SECTION-->
       <section class="tools">
         <h2>Tools & Scripts</h2>
